manifests/apps/karavan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karavan
  annotations:
    argocd.argoproj.io/sync-wave: "1"
